sealos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fb
  labels:
    cloud.sealos.io/app-deploy-manager: fb
spec:
  ports:
    - name: serv
      port: 9123
    - name: api
      port: 9991
  selector:
    app: fb
