sealos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fb
  labels:
    cloud.sealos.io/app-deploy-manager: fb
    cloud.sealos.io/app-deploy-manager-domain: awopkpmojrmc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
    nginx.ingress.kubernetes.io/server-snippet: |
      client_header_buffer_size 64k;
      large_client_header_buffers 4 128k;
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($request_uri ~* \.(js|css|gif|jpe?g|png)) {
        expires 30d;
        add_header Cache-Control "public";
      }
spec:
  rules:
    - host: awopkpmojrmc.cloud.sealos.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fb
                port:
                  number: 9123
    - host: uxnceymwpego.cloud.sealos.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fb
                port:
                  number: 9991
  tls:
    - hosts:
        - awopkpmojrmc.cloud.sealos.io
      secretName: wildcard-cloud-sealos-io-cert
